--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,8 @@ Type: Package
 Title: Thin Wrapper around `rust crate heck`
 Version: 0.1.0
 Authors@R: c(
+    person("Josiah", "Parry", , "josiah.parry@gmail.com", role = c("aut"),
+           comment = c(ORCID = "0000-0001-9910-865X")),
     person("Dyfan", "Jones", email = "dyfan.r.jones@gmail.com", role = "cre")
   )
 Description: Convert string into cases like snake using `rust crate heck` <https://crates.io/crates/heck>.
