--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = 'rheck'
+name = 'heck'
 version = '0.1.0'
 edition = '2021'
 
 [lib]
 crate-type = [ 'staticlib' ]
-name = 'rheck'
+name = 'heck'
 
 [dependencies]
 extendr-api = '*'
