--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: heck
 Type: Package
-Title: Thin Wrapper around 'rust crate heck'
+Title: Highly Performant String Case Converter
 Version: 0.1.0
 Authors@R: c(
     person("Josiah", "Parry", , "josiah.parry@gmail.com", role = c("aut"),
            comment = c(ORCID = "0000-0001-9910-865X")),
     person("Dyfan", "Jones", email = "dyfan.r.jones@gmail.com", role = "cre")
   )
-Description: Convert strings into cases like snake or camel using 'rust crate heck' <https://github.com/withoutboats/heck>.
+Description: Provides a case conversion between common cases like CamelCase and 
+    snake_case. Using the 'rust crate heck' <https://github.com/withoutboats/heck>
+    as the backend to provide highly performant case conversion for 'R'.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
