--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Description: Provides a case conversion between common cases like CamelCase and
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/DyfanJones/heck
 Config/rextendr/version: 0.3.1.9000
 RoxygenNote: 7.3.1
 SystemRequirements: Cargo (Rust's package manager), rustc
