--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -4,9 +4,9 @@ version = '0.1.0'
 edition = '2021'
 
 [lib]
-crate-type = [ 'staticlib' ]
+crate-type = ['staticlib']
 name = 'heck'
 
 [dependencies]
-extendr-api = '*'
+extendr-api = '0.7.0'
 heck = "0.5.0"
