--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: heck
 Type: Package
 Title: Highly Performant String Case Converter
-Version: 0.1.1
+Version: 0.1.2
 Authors@R: c(
     person("Josiah", "Parry", , "josiah.parry@gmail.com", role = c("aut"),
            comment = c(ORCID = "0000-0001-9910-865X")),
@@ -17,7 +17,7 @@ URL: https://github.com/DyfanJones/heck,
     https://dyfanjones.r-universe.dev/heck
 Config/rextendr/version: 0.3.1.9000
 RoxygenNote: 7.3.2
-SystemRequirements: Cargo (Rust's package manager), rustc
+SystemRequirements: Cargo (Rust's package manager), rustc >= 1.70
 Roxygen: list(markdown = TRUE)
 Suggests: 
     spelling,
