--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -8,5 +8,8 @@ crate-type = ['staticlib']
 name = 'heck'
 
 [dependencies]
-extendr-api = '0.7.1'
+extendr-api =  "0.8.0"
 heck = "0.5.0"
+
+[patch.crates-io]
+extendr-api = { git = "https://github.com/extendr/extendr"}
