prepare for cran 0.1.5 release (#15)
* update cargo lock

* rebuild src directory

* set publish to false

* re-vendor

* heck -> rheck prevent any potential cyclic dependencies

* re-build

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
-name = 'heck'
-version = '0.1.0'
-edition = '2021'
+name = "rheck"
+publish = false
+version = "0.1.0"
+edition = "2021"
+rust-version = "1.65"
+
 
 [lib]
-crate-type = ['staticlib']
-name = 'heck'
+crate-type = ["staticlib"]
+name = "heck"
 
 [dependencies]
 extendr-api =  "0.8.0"
